--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "devtron": "^1.4.0",
-    "electron": "^1.6.12"
+    "electron": "^1.6.12",
+    "electron-cookies": "^1.1.0"
   }
 }
