--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "devtron": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
+    "devtron": "^1.4.0"
+  },
+  "dependencies": {
     "electron": "^1.6.12",
-    "electron-cookies": "^1.1.0"
+    "electron-cookies": "^1.1.0",
+    "app-root-path": "^2.0.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
